# cuda_cpp_study

./: .gitignore  CMakeLists.txt  add1.cu  hello_from_gpu.cu  kernels.cu  main.cu  matrix.cu  matrix_copy.cu  query.cu  readme.md  reduce.cu  sanitizer_add1.txt  utils.cu
include/: base.cuh  base_types.cuh  error.cuh  event_timer.cuh  float_type.cuh  kernels.cuh  matrix.cuh  matrix_copy.cuh  reduce.cuh  utils.cuh
notes/: 1. CUDA GPU kernel 调试.md  2.cubin 程序完整调试方案.md  3.Error Code: 719.md  4.如何使用compute-sanitizer工具.md
notes/arch/: 如何吃透架构.md
notes/nsight/: nsight_compute_introduce.md  nsight_system_vs_compute.md  perf_event_paranoid.md  qa.md  temp_perf_evnet_.sh
notes/runtime_error/: illegal_memory_access.md
